tests/unit/default/syntax-error/067-create-table-parens-parens.t
---- IN ----
+%table()
---- OUT ----
---- ERR ----
syntax: expected <name> after `+%table(` near `)` at position 8 - at line 1
---- EXIT ----
1
